# ctf-agent

./: .env.example  .gitignore  README.md  pyproject.toml
docker/: Dockerfile
src/agent/: main.py
src/ctf_agent/core/: agent.py  builtins.py  cli.py  config.py
src/ctf_agent/tools/: __init__.py  docker_mcp.py  docker_util.py  test_server.py
src/ctf_agent/util/: logger.py
